# Covert-Exfil

./: README.md
core/: Cargo.toml
core/src/: lib.rs
receiver/: Cargo.toml
receiver/src/: main.rs
sender/: Cargo.toml
sender/src/: main.rs
