[package]
name = "covert-core"
version = "0.1.0"
edition = "2021"

[dependencies]
data-encoding = "2.6"
rand = "0.8"
tokio = { version = "1", features = ["time"] }
anyhow = "1.0.102"
aead = "0.6.0-rc.10"
aes-gcm = "0.10"
thiserror = "2.0.18"
base32 = "0.5"
[patch.crates-io]
universal-hash = { git = "https://github.com/RustCrypto/traits", tag = "universal-hash-v0.5.1" }