[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
covert-core = { path = "../core" }
flate2 = "1.0"
hickory-client = "0.26.0-alpha.1"
hickory-proto = "0.26.0-alpha.1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }